[workspace]
resolver = "2"
members = ["crates/*", ]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/voxell-tech/velyst"
readme = "README.md"

[workspace.dependencies]
typst_element = { path = "crates/typst_element", version = "0.1.0" }
typst_imaging = { path = "crates/typst_imaging", version = "0.1.0" }

# Bevy dependencies
bevy = { version = "0.18.1", default-features = false }
bevy_vello = "0.13.1"
# Vello dependencies
vello = "0.7.0"
vello_svg = "0.9.0"
# Imaging dependencies
imaging = { git = "https://github.com/forest-rs/imaging", rev = "79f02ae", default-features = false }
imaging_vello = { git = "https://github.com/forest-rs/imaging", rev = "79f02ae", default-features = false, features = ["vello-0-7"] }
# Peniko/Kurbo
peniko = { version = "0.6", features = ["std"] }
# Typst dependencies
typst = "0.14.2"
typst-library = "0.14.2"
typst-eval = "0.14.2"
typst-layout = "0.14.2"
typst-assets = "0.14.2"
# In sync with Typst:
unicode-math-class = "0.1"
ttf-parser = "0.25"
hayro = "0.4"
# Other
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hashbrown = "0.17"
ecow = { version = "0.2", features = ["serde"] }
thiserror = "1"
smallvec = "1"
paste = "1"

[workspace.lints.clippy]
redundant_type_annotations = "warn"
bool_comparison = "allow"
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
