[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]
exclude = ["/.github/"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/voxell-tech/velyst"
readme = "README.md"

[workspace.dependencies]
velyst = { path = "crates/velyst", version = "0.1.0" }
typst_element = { path = "crates/typst_element", version = "0.1.0" }
typst_imaging = { path = "crates/typst_imaging", version = "0.1.0" }
kanva = { path = "crates/kanva", version = "0.1.0" }
kanva_svg = { path = "crates/kanva_svg", version = "0.1.0" }
kanva_typst = { path = "crates/kanva_typst", version = "0.1.0" }

# Bevy dependencies
bevy = { version = "0.18.1", default-features = false }
bevy_vello = "0.13.1"
# Vello dependencies
vello = "0.7.0"
vello_svg = "0.9.0"
# Imaging dependencies
imaging = { version = "0.0.1", default-features = false }
svg_imaging = { version = "0.0.1", default-features = false }
imaging_vello = { version = "0.0.1", default-features = false, features = ["vello-0-7"] }
# Typst dependencies
typst = "0.15"
typst-library = "0.15"
typst-eval = "0.15"
typst-layout = "0.15"
typst-assets = "0.15"
# In sync with Typst:
unicode-math-class = "0.1"
ttf-parser = "0.25"
hayro-svg = "0.7"
usvg = { version = "0.47.0", default-features = false, features = ["text"] }
image = { version = "0.25", default-features = false }
# Other
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ureq = "2"
flate2 = "1"
tar = "0.4"
dirs = "5"
hashbrown = "0.17"
ecow = { version = "0.2", features = ["serde"] }
thiserror = "1"
smallvec = "1"
paste = "1"

[workspace.lints.clippy]
redundant_type_annotations = "warn"
bool_comparison = "allow"
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
