[package]
name = "kanva"
description = "Backend-agnostic dynamic 2D scene graph."
keywords = ["graphics", "2d", "scene", "animation", "peniko"]
categories = ["graphics", "rendering"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
peniko = { workspace = true }
smallvec = { workspace = true }
imaging = { workspace = true }
hashbrown = { workspace = true }
ttf-parser = { workspace = true }

[lints]
workspace = true

[features]
default = ["std"]
std = ["peniko/std", "imaging/std"]
libm = ["peniko/libm", "imaging/libm"]
