[package]
name = "kanva"
description = "Backend-agnostic 2D graphics scene graph."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
imaging.workspace = true
hashbrown.workspace = true
ttf-parser.workspace = true

[features]
default = ["std"]
std = ["imaging/std"]
libm = ["imaging/libm"]
