[package]
name = "typst_imaging"
description = "Renders Typst frames into any imaging PaintSink."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
typst-library = { workspace = true }
imaging = { workspace = true, features = ["std"] }
peniko = { workspace = true }

[lints]
workspace = true
