[package]
name = "typst_imaging"
description = "Typst frame renderer backed by the imaging crate."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
typst-library = { workspace = true }
imaging = { workspace = true, features = ["std"] }
svg_imaging = { workspace = true, features = ["std"] }
peniko = { workspace = true }

[lints]
workspace = true
