[package]
name = "typst_imaging"
description = "Backend-agnostic Typst renderer."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
typst-library = { workspace = true }
imaging = { workspace = true, features = ["std"] }
svg_imaging = { workspace = true, features = ["std"] }
hayro-svg = { workspace = true }
peniko = { workspace = true }

[lints]
workspace = true
