[package]
name = "typst_vello"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
typst-library = { workspace = true }
vello = "0.5.0"
vello_svg = "0.7.1"
smallvec = { workspace = true }
ttf-parser = "0.25.1"
hayro = "0.4"

[lints]
workspace = true
