[package]
name = "typst_vello"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
typst-library = { workspace = true }
vello = { workspace = true }
vello_svg = { workspace = true }
smallvec = { workspace = true }
ttf-parser = { workspace = true }
hayro = { workspace = true }

[lints]
workspace = true
