[package]
name = "velyst"
description = "A Typst integration for Vello and Bevy."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
paste = { workspace = true }
imaging = { workspace = true, features = ["std"] }
imaging_vello = { workspace = true }
typst_imaging = { workspace = true }
kanva = { workspace = true }
kanva_typst = { workspace = true }

bevy = { workspace = true, features = ["2d"] }
bevy_vello = { workspace = true, features = ["svg"] }
typst = { workspace = true }
typst-eval = { workspace = true }
typst-layout = { workspace = true }
typst-assets = { workspace = true, optional = true }
chrono = { workspace = true }
ecow = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }
ureq = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
dirs = { workspace = true }

[features]
default = ["embed-fonts"]
embed-fonts = ["dep:typst-assets", "typst-assets/fonts"]

[lints]
workspace = true
